CTOO-233 (feature): Add DuckDB/Trino execution context and Expr models (#132)
- **Add an intermediate IR for expressions**
- **Add duckdb test**
- **Add in-memory testing Trino server**
- **Add Trino expr**


https://treasure-data.atlassian.net/browse/CTOO-233